--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipe</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href = "recipes/lasagna.html">Lasagna</a></li>
-            <li><a href = "recipes/gnocchi.html">Gnocchi</a></li>
-            <li><a href = "recipes/frito-chicken-casserole.html">Frito Chicken Casserole</a></li>
-        </ul>
+        <h1 class="main-banner">Odin Recipes</h1>
+        <div class="recipes">
+            <div class="lasagna">
+                <a href="recipes/lasagna.html"><img src="./images/lasagna-finished.webp" alt="Lasagna"></a>
+                <h2>Lasagna Recipe</h2>
+            </div>
+
+            <div class="gnocchi">
+                <a href="recipes/gnocchi.html"><img src="./images/gnocchi.webp" alt="gnocchi"></a>
+                <h2>Gnocchi Recipe</h2>
+            </div>
+
+            <div class="frito">
+                <a href="recipes/frito-chicken-casserole.html"><img src="./images/frito-chicken-casserole.webp" alt="frito chicken casserole"></a>
+                <h2>Frito Chicken Casserole Recipe</h2>
+            </div>
+        </div>
     </body>
 </html>
